2001-08-09 Alexander Rawass <alexannika@users.sourceforge.net>

	* changed all size-functions from int to asize/float
	* qxmltreemap: if a node has got an empty attribute 'size',
	  the size is calculated recursively

	* new files & classes
	  qlistviewtreemapwindow.cpp
	  qlistviewtreemapwindow.h
	  qlistviewtreemaparea.cpp
	  qlistviewtreemap.h
	  qxmltreemapviewer.cpp

	* files q*treemap* are built as a library libqtreemap
	* new qxmltreemapviewer binary:
	  stand-alone QT/Xml Treemap Viewer
	* QTreeMap/QListViewTreeMapArea works fine with KProf

	
2001-08-05 Alexander Rawass <alexannika@users.sourceforge.net>

	* compiler warnings removed
	* using List of Objects (instead List of KDirInfo)
	* Bug: regexps not working in xml-window
	       selection not working in xml-window
	* removed dependencies to KDirStat from QTreeMap
	
2001-07-29 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* load XML working (with memory hole)

2001-07-28 Alexander Rawass <alexannika@users.sourceforge.net>

	* new sort of treemap/drawing mode: piemap
	  added file qtreemaparea_piemap.cpp
	  will not get checked in until legal problems solved
	* checkmarks work also for paintmode

	* new options for piemap mode
	* bitmap can be saved to a file
	* tree can be saved as xml file

	* new files & classes
	  qxmltreemapwindow.cpp
	  qxmltreemapwindow.h
	  qxmltreemaparea.cpp
	  qxmltreemap.h
	  (don't work yet)
	
	* new defines for compilation:
	  HAVE_PIEMAP if you have the piemap source
	  EXPERIMENTAL if you want to see more options
	
	
2001-07-17 Alexander Rawass <alexannika@users.sourceforge.net>

	* one can use keywords instead of numbers for options
	* checkmarks start working
	* yet only with drawmode

2001-07-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* user can now use regexps or wildcards in config
	* regexps are now compiled only once at startup
	* wildcards are working correctly
	* regexps need 3 /// backslashes in kdirstatrc